# cxx_utils

./: .gitignore  CMakeLists.txt  README.md
coms/: udp.h  udp_win32.c
examples/: logger.cpp  realtime.cpp  udpserver.cpp
spdlog/: log_helper.cpp  log_helper.hpp
src/: logger.hpp  timeit.hpp  udp_server.hpp  udpserver.hpp  utils.hpp  utils_win32.cpp
timeit/: timeit.c  timeit.h  timeit.hpp
